# COPTL

./: CMakeLists.txt  README.md
include/: logger.h  logger_ansi.h  logger_win32.h
src/: logger.cpp
src/include/: defs.h  logger_ansi.h  logger_win32.h
tests/: test.cpp
